file upload & filter version

--- a/gitTest/WebContent/WEB-INF/commandHandler.properties
+++ b/gitTest/WebContent/WEB-INF/commandHandler.properties
@@ -8,3 +8,5 @@
 /guestbookList.do=handler.GuestbookListHandler
 /write.do=handler.GuestbookWriteHandler
 /deleteMessage.do=handler.GuestbookDeleteHandler
+/editMember.do=handler.EditMemberHandler
+/delMember.do=handler.DelMemberHandler
